--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -1,5 +1,7 @@
 task.new=New Task
 task.save.success=Task saved successfully!
+task.delete.success=Tasl delete successfully!
+task.notfound= Task not found
 
 delete=Delete
 cancel=Cancel
