--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -1,5 +1,7 @@
 task.new=Nova Tarefa
 task.save.success=Tarefa cadastrada com sucesso!
+task.delete.success=Tarefa apagada com sucesso!
+task.notfound=Tarefa não encontrada
 
 delete=Excluir
 cancel=Cancelar
