--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -2,6 +2,7 @@ task.new=New Task
 task.save.success=Task saved successfully!
 task.delete.success=Tasl delete successfully!
 task.notfound= Task not found
+task.notowner=You are not the owner of this task
 
 delete=Delete
 cancel=Cancel
