--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -2,6 +2,7 @@ task.new=Nova Tarefa
 task.save.success=Tarefa cadastrada com sucesso!
 task.delete.success=Tarefa apagada com sucesso!
 task.notfound=Tarefa não encontrada
+task.notowner=Você não é o dono desta tarefa
 
 delete=Excluir
 cancel=Cancelar
